<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/main">

    <View
        android:layout_width="15dp"
        android:layout_height="54dp"
        android:id="@+id/charge"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/state_label"
        android:id="@+id/textView2"
        android:layout_marginTop="46dp"
        android:layout_alignEnd="@+id/charge"
        android:layout_marginEnd="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/plugged_label"
        android:id="@+id/textView3"
        android:layout_above="@+id/textView5"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/state_placeholder"
        android:id="@+id/state"
        android:layout_alignTop="@+id/textView2"
        android:layout_toEndOf="@+id/textView3"
        android:paddingStart="20dp"
        android:paddingEnd="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/plugged_placeholder"
        android:id="@+id/plugged"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignStart="@+id/level" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/level_label"
        android:id="@+id/textView5"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/battery"
        android:layout_toStartOf="@+id/state" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/level_placeholder"
        android:id="@+id/level"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignStart="@+id/tech" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/technology_label"
        android:id="@+id/textView7"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView5"
        android:layout_alignEnd="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/technology_placeholder"
        android:id="@+id/tech"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:layout_alignTop="@+id/textView7"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/temperature_label"
        android:id="@+id/textView9"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/textView7"
        android:layout_alignEnd="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/temperature_placeholder"
        android:id="@+id/temperature"
        android:layout_marginStart="0dp"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignStart="@+id/health" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/voltage_label"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView9"
        android:layout_alignEnd="@+id/textView5"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/voltage_placeholder"
        android:id="@+id/voltage"
        android:layout_alignTop="@+id/textView11"
        android:layout_alignStart="@+id/temperature" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/current_label"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView11"
        android:layout_alignEnd="@+id/textView7"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/current_placeholder"
        android:id="@+id/current"
        android:layout_alignTop="@+id/textView13"
        android:layout_alignStart="@+id/voltage" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView2" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:id="@+id/imageView2"
        android:background="@color/header_background"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:id="@+id/battery"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:cropToPadding="true"
        android:src="@drawable/battery_red"
        android:contentDescription="@string/battery_indicator_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/model_label"
        android:id="@+id/textView"
        android:layout_below="@+id/textView13"
        android:layout_alignEnd="@+id/textView7"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/model_placeholder"
        android:id="@+id/model"
        android:layout_marginStart="0dp"
        android:layout_alignTop="@+id/textView"
        android:layout_alignStart="@+id/current" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/health_label"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView"
        android:layout_alignEnd="@+id/textView11"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/health_placeholder"
        android:id="@+id/health"
        android:layout_marginStart="20dp"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignEnd="@+id/tech" />


</RelativeLayout>
